# trader

./: .env.example  Dockerfile  docker-compose.yml  main.py  requirements.txt
cfd_trader_assistant/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
cfd_trader_assistant/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
cfd_trader_assistant/.github/ISSUE_TEMPLATE/: alerting.md  backtesting.md  bug_report.md  config.yml  configuration.md  dashboard.md  data.md  documentation.md  feature_request.md  health.md  installation.md  macro.md  performance.md  question.md  risk.md  signals.md
cfd_trader_assistant/.github/workflows/: ci.yml
cfd_trader_assistant/app/: __init__.py  alerts.py  backtest.py  dashboard.py  health.py  indicators.py  macro.py  pricing.py  rules.py  scheduler.py  signal_engine.py  signals.py  sizing.py  utils.py
cfd_trader_assistant/app/providers/: __init__.py  base.py  broker_ws_stub.py  stooq.py  yahoo.py
cfd_trader_assistant/config/: account.yaml  instruments.yaml  macro.yaml  rules.yaml
cfd_trader_assistant/data/samples/: sample_nas100_5m.csv
cfd_trader_assistant/tests/: test_backtest.py  test_indicators.py  test_pricing.py  test_rules.py  test_signal_engine.py  test_signals.py  test_sizing.py
config/: account.yaml  instruments.yaml  macro.yaml  rules.yaml
data/samples/: NAS100_5m_sample.csv  nas100_5m_sample.csv
tests/: test_indicators.py  test_rules.py  test_signals.py  test_sizing.py
